[tool.ruff]
exclude = ["examples", "docs", "build"]
select = ["E", "F", "I"]
ignore = ["F405", "F403", "E501"]
fixable = ["I"]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.poetry]
name = "snedbot"
version = "0.1.0" # I do not actually update this, lol
description = "Your friendly neighbourhood multi-purpose Discord bot."
authors = ["hypergonial <46067571+hypergonial@users.noreply.github.com>"]
license = "GNU GPL-v3"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
dateparser = "^1.1.8"
psutil = "^5.9.6"
Pillow = "^10.0.1"
asyncpg = "^0.28.0"
Levenshtein = "^0.23.0"
uvloop = {version = "==0.18.0", platform="linux"}
aiodns = "~=3.1.1"
Brotli = "~=1.0"
ciso8601 = "~=2.3"
kosu = {git = "https://github.com/hypergonial/kosu.git"}
hikari-lightbulb = "~=2.3.5"
hikari-miru = "~=3.3.1"

[tool.poetry.dev-dependencies]
nox = "^2023.4.22"
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
