[project]
name = "snedbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiodns>=3.2.0",
    "aiohttp>=3.11.13",
    "asyncpg>=0.30.0",
    "asyncpg-stubs>=0.30.0",
    "brotli>=1.1.0",
    "ciso8601>=2.3.2",
    "dateparser>=1.2.1",
    "hikari>=2.1.1",
    "hikari-arc>=1.4.0",
    "hikari-miru>=4.2.0",
    "hikari-toolbox>=0.1.7",
    "kosu",
    "levenshtein>=0.26.1",
    "pillow>=11.1.0",
    "psutil>=7.0.0",
    "types-pillow>=10.2.0.20240822",
    "uvloop>=0.21.0",
]

[tool.uv.sources]
kosu = { git = "https://github.com/hypergonial/kosu.git" }

[dependency-groups]
dev = ["nox>=2025.2.9", "ruff>=0.9.9"]

[tool.ruff]
exclude = ["examples", "docs", "build"]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "TCH",
    "N",
    "D2",
    "D3",
    "D415",
    "D417",
    "D418",
    "D419",
    "Q",
    "RSE",
    "SIM",
    "RUF",
]
ignore = ["F405", "F403", "E501", "D203", "D205", "D213", "RUF001"]
fixable = ["I", "TCH", "D", "RUF"]


[tool.mypy]
ignore_errors = true # I use pyright only because mypy dumb

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportPrivateUsage = "none"
