[project]
name = "snedbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiodns>=4.0.0",
    "aiohttp>=3.13.5",
    "asyncpg>=0.31.0",
    "asyncpg-stubs>=0.31.2",
    "brotli>=1.2.0",
    "ciso8601>=2.3.3",
    "dateparser>=1.4.0",
    "hikari>=2.5.0",
    "hikari-arc>=2.2.0",
    "hikari-miru>=4.2.0",
    "hikari-toolbox>=0.1.7",
    "kosu",
    "levenshtein>=0.27.3",
    "pillow>=12.2.0",
    "psutil>=7.2.2",
    "types-pillow>=10.2.0.20240822",
    "uvloop>=0.22.1",
]

[tool.uv.sources]
kosu = { git = "https://github.com/hypergonial/kosu.git" }

[dependency-groups]
dev = ["nox>=2026.2.9", "ruff>=0.15.0"]

[tool.ruff]
exclude = ["examples", "docs", "build"]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "TCH",
    "N",
    "D2",
    "D3",
    "D415",
    "D417",
    "D418",
    "D419",
    "Q",
    "RSE",
    "SIM",
    "RUF",
]
ignore = ["F405", "F403", "E501", "D203", "D205", "D213", "RUF001"]
fixable = ["I", "TCH", "D", "RUF", "SIM"]


[tool.mypy]
ignore_errors = true # I use pyright only because mypy dumb

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportPrivateUsage = "none"
